test/fail/exceptions/use_errorfunc.lly
#[
ValueError
Traceback:
    from errorfunc.lly:1: in f
    from use_errorfunc.lly:10: in __main__
]#

import errorfunc

errorfunc::f()
